# graphdbservice

./: .gitignore  .gitlab-ci.yml  AUTH_ARCHITECTURE_DIAGRAM.md  Dockerfile  ERROR_MESSAGE_EXAMPLES.md  EVE_v0.0.6_COMPAT.md  GODOC.md  GRAPHDBSERVICE_STATUS.md  INTEGRATION_TESTS.md  MIGRATION_LOGGING_PROPOSAL.md  PARALLEL_EXECUTION_SAFETY.md  PXGRAPHSERVICE_STATUS.md  README.md  REFACTORING.md  REFACTORING_QUICKSTART.md  REFACTORING_STATUS.md  SECURITY_AUDIT.md  TESTING.md  USER_MANAGEMENT_PROPOSAL.md  WEB_UI.md  app.py  bkp.py  go.mod  go.sum  main.go  manifest.yaml  nixpacks.toml  parallel.py  prefect.yaml  pxgraphdb.py  pyproject.toml  repo-config.ttl  taskfile.yml
auth/: audit.go  jwt.go  jwt_test.go  migration_logger.go  models.go  password.go  password_test.go  storage.go  storage_test.go
cmd/: auth_handlers.go  auth_init.go  auth_middleware.go  graphdb.go  graphdb_integration_test.go  graphdb_test.go  migration_handlers.go  registry.go  rest_handlers.go  root.go  security_test.go  semantic_api.go  service.go  swagger_docs.go  user_handlers.go  version.go  web_handlers.go  web_handlers.go.full  web_handlers_test.go
cmd/bak/: audit_handlers.go  auth_init.go
cmd/graphdbservice/: graphdb_core.go  graphdb_test.go.disabled  rest_handlers.go  root.go  semantic_api.go  service.go  version.go
data/users/: users.json  users.json.backup
docs/: README.md  docs.go  swagger.json  swagger.yaml
examples/workflows/: 01-nightly-backup.json  02-multi-graph-migration.json  03-multi-repo-delete.json  04-single-delete.json  05-repo-migration-ontotext.json  06-repo-create-example.json  07-repo-create-with-config.json  08-graph-import-with-data.json  GRAPH_IMPORT_EXAMPLE.md  README.md  REPO_CREATE_EXAMPLE.md  blub.sh  create-repo-example.sh  import-data-example.sh
internal/client/: manager.go
internal/domain/: errors.go  task.go
internal/helpers/: constants.go  files.go  utils.go  validation.go
internal/operations/: creates_and_renames.go  deletes_and_imports.go  handler.go  migrations.go  registry.go
publications/: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  manifest.003.yml  manifest.004.yml  manifest.005.yml  manifest.006.yml  manifest.008.yml  publications.py  publisher.py  pyproject.toml  pyproject.toml.pxpim-graph-etl  rest.py  settings.py  taskfile.yml
pxgraphdb/: new_repository_config.ttl.jinja  pxdocker.py  pxexport.py  pxgraphdb.py  pxgraphdbinfra.py  pximport.py  pxinfisical.py  pxsingleton.py  pxutils.py
pxgraphdb/config/: count_triples.sparql.jinja  get_graph_names.rq  new_repository_config.ttl.jinja  triples_count_by_graph.rq
pxknowledge_graph/: pxgraphdb.py
requests/: 00_repo-migration.sh  01_repo-rename.sh  02_repo-delete.sh  03_repo-create.sh  04_graph-import.sh  05_graph-delete.sh  06_graph-migration.sh  07_graph-rename.sh  contract.json  graph-delete.sh  graph-import.sh  graph-migration.json  graph-migration.sh  graph-rename.json  graph-rename.sh  repo-create.sh  repo-delete.json  repo-delete.sh  repo-migration.json  repo-migration.sh  repo-rename.json  repo-rename.sh
tests/: conftest.py  test_backup.py  test_import_multi_export.py  test_local.py  test_parallel_read.py  test_production.py
web.disabled/templates/: audit_templ.go  index_templ.go  layout_templ.go  migration_logs_templ.go  tasks.templ  users.templ  users_templ.go
web/static/: migration-logs.js  modal.js
web/templates/: audit.templ  change_password.templ  change_password_templ.go  index.templ  index_templ.go  layout.templ  layout_templ.go  login.templ  login_templ.go  migration_logs.templ  migration_logs_templ.go  tasks.templ  tasks_templ.go  (+2 more)
