[tool.poetry]
name = "pxgraphdb"
version = "0.0.28"
description = ""
authors = ["franciscsimon <francisc.simon@pantopix.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
requests = "^2.32.3"
jinja2 = "^3.1.4"
httpx = "0.27.2"
dask = {extras = ["distributed"], version = "^2025.1.0"}
toolz = "0.12.0"
lz4 = "^4.3.3"
numpy = "^2.2.2"
pandas = "^2.2.3"
fsspec = "^2024.12.0"
s3fs = "^2024.12.0"
pxinfra = "0.1.24"

[[tool.poetry.source]]
name = "pantopix"
url = "https://cache.hz.pantopix.net/repository/pypi-private/simple/"
priority = "supplemental"


[[tool.poetry.source]]
name = "pantopix2"
url = "https://cache.hz.pantopix.net/repository/pypi-private/"
priority = "supplemental"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
