[project]
name = "pxgraphdb"
version = "0.0.33"
description = ""
authors = [{ name = "franciscsimon", email = "francisc.simon@pantopix.com" }]
requires-python = ">=3.12,<3.14"
readme = "README.md"
dependencies = [
    "requests>=2.32.3,<3",
    "jinja2>=3.1.4,<4",
    "httpx==0.27.2",
    "dask[distributed]>=2025.1.0,<2026",
    "toolz==0.12.0",
    "lz4>=4.3.3,<5",
    "numpy>=2.2.2,<3",
    "pandas>=2.2.3,<3",
    "fsspec>=2024.12.0,<2025",
    "s3fs>=2024.12.0,<2025",
    "pxinfra==0.1.29",
]

[dependency-groups]
test = ["pytest>=8.3.4,<9"]

[tool.uv]
default-groups = ["test"]

[[tool.uv.index]]
name = "pantopix"
url = "https://cache.hz.pantopix.net/repository/pypi-private/simple/"
publish-url = "https://cache.hz.pantopix.net/repository/pypi-private/"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
