[project]
name = "kaeser-publications"
version = "0.0.1"
description = ""
authors = [{ name = "franciscsimon", email = "francisc.simon@pantopix.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "pxinfra (>=0.1.28,<0.2.0)",
    "faststream[rabbit] (>=0.5.41,<0.6.0)",
    "openziti (>=1.0.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
]

[[tool.uv.index]]
name = "pantopix"
url = "https://cache.hz.pantopix.net/repository/pypi-private/simple/"
publish-url = "https://cache.hz.pantopix.net/repository/pypi-private/"
explicit = true

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"